tests/baselines/reference/classOverloadForFunction2.errors.txt
==== tests/cases/compiler/classOverloadForFunction2.ts (2 errors) ====
    function bar(): string;
    class bar {}
    ~~~~~
!!! error TS1041: Function implementation expected.
          ~~~
!!! error TS2000: Duplicate identifier 'bar'.